--- a/polls/templates/blog.html
+++ b/polls/templates/blog.html
@@ -214,10 +214,18 @@
 									<li><a href="#">设施</a></li>
 								</ul>
 							</li>
-							<li><a href="/organization">人事</a></li>
+							<li class="has-dropdown">
+								<a href="#">人事</a>
+								<ul class="dropdown">
+									<li><a href="/company">公司介绍</a></li>
+									<li><a href="/organization">组织架构</a></li>
+								</ul>
+							</li>
+							<li><a href="/dashboard">Dashboard</a></li>
 							<li><a href="#">其它</a></li>
 							<li><a href="#">联系我们</a></li>
 							<li><a href="/logout" ><i class="fas fa-sign-out-alt "></i></a></li>
+							<img src="/static/thirdparty/ft5_79_church/images/house.jpg" class="rounded-circle img-fluid responsive"  style="width:30px;height:30px;display:inline;float:right;margin-right:70px"> 
 						</ul>
 					</div>
 				</div>
