--- a/polls/templates/publish.html
+++ b/polls/templates/publish.html
@@ -259,7 +259,13 @@
 									<li><a href="#">设施</a></li>
 								</ul>
 							</li>
-							<li><a href="#">人事</a></li>
+							<li class="has-dropdown">
+								<a href="#">人事</a>
+								<ul class="dropdown">
+									<li><a href="#">公司介绍</a></li>
+									<li><a href="/organization">组织架构</a></li>
+								</ul>
+							</li>
 							<li><a href="#">其它</a></li>
 							<li><a href="#">联系我们</a></li>
 							<li><a href="/logout" ><i class="fas fa-sign-out-alt "></i></a></li>
