--- a/polls/templates/report.html
+++ b/polls/templates/report.html
@@ -505,6 +505,7 @@
 				success: function(rps) {
 					rmfile=""
 					rmfilepath=""
+					window.location.reload()
 				},
 				
 				error: function(xhr,status,errMsg){
@@ -524,6 +525,7 @@
 		$('#rmoveReportModal').modal();  
 		rmfile=filename
 		rmfilepath=filepath	
+		
 	}
 	
 	totalreports=[];
@@ -748,6 +750,7 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
+						 
 						<ul>
 							<li class="active"><a href="/loginsucc">首页</a></li>
 							<li><a href="/blog/?pg=1&searchval=">论坛</a></li>
@@ -760,11 +763,20 @@
 									<li><a href="javascript:void(0);" onclick="menuclick(this)">设施</a></li>
 								</ul>
 							</li>
-							<li><a href="/organization">人事</a></li>
+							<li class="has-dropdown">
+								<a href="#">人事</a>
+								<ul class="dropdown">
+									<li><a href="/company">公司介绍</a></li>
+									<li><a href="/organization">组织架构</a></li>
+								</ul>
+							</li>
+							<li><a href="/dashboard">Dashboard</a></li>
 							<li><a href="#">其它</a></li>
 							<li><a href="#">联系我们</a></li>
 							<li><a href="/logout" ><i class="fas fa-sign-out-alt "></i></a></li>
+							<img src="/static/thirdparty/ft5_79_church/images/house.jpg" class="rounded-circle img-fluid responsive"  style="width:30px;height:30px;display:inline;float:right;margin-right:70px"> 
 						</ul>
+						
 					</div>
 				</div>
 			</div>
