--- a/polls/templates/company.html
+++ b/polls/templates/company.html
@@ -6,7 +6,7 @@
 	<!-- <title>Church &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-
+	<title>Organization</title>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 	
