--- a/polls/templates/dashboard.html
+++ b/polls/templates/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dream</title>
+    <title>Dashboard</title>
     <!-- Bootstrap Styles-->
     <link href="/static/thirdparty/cpts_852_bnc/assets/css/bootstrap.css" rel="stylesheet" />
     <!-- FontAwesome Styles-->
